--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "signal": "node server/index.mjs",
+    "dev:all": "concurrently -k -n web,signal -c blue,magenta \"npm:dev\" \"npm:signal\""
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -15,6 +17,7 @@
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "react-router-dom": "^6.27.0",
+    "ws": "^8.18.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -29,6 +32,7 @@
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0"
+    "vite": "^7.1.0",
+    "concurrently": "^9.1.2"
   }
 }
